# periodic_table_db

./: LICENSE  README.md  TODO  generate_database.py  pyproject.toml  setup
periodic_table_db/: __init__.py
periodic_table_sqlite/: __init__.py  database.py  generate_database.py  shared.py  www_table_parser.py
src/: generate_database.py
src/periodic_table_db/: __init__.py  base.py  data.py  database.py  db_builder.py  dbapi.py  dbconnector.py  features.py  generatedb.py  schema.py  shared.py
src/periodic_table_db/builder/: __init__.py  data.py  db_builder.py  features.py  generatedb.py  schema.py  shared.py
src/periodic_table_db/builder/extended/: __init__.py  db_builder.py  features.py  schema.py
src/periodic_table_db/builder/extended/data/: electronic_structure.py  group_block_data.py
src/periodic_table_db/data/: electronic_structure.py
src/periodic_table_db/dbapi/: __init__.py  dbapi.py
src/periodic_table_db/extended/: __init__.py  database.py  db_builder.py  features.py  schema.py
src/periodic_table_db/extended/data/: __init__.py  electronic_structure.py  group_block_data.py  group_data.py
src/periodic_table_db/schema/: __init__.py  base.py
test/builder/extended/data/: test_electronic_structure.py
test/data/: test_electronic_structure.py
tests/: test_shared.py
tests/builder/extended/data/: test_electronic_structure.py
tests/integration/: test_generatedb.py
tests/resources/: requests_local_file.py
tests/test_files/: atomic-weights.htm
tests/unit/: test_shared.py
